Took care of mysql test suite failures on Windows.

mysql-test/suite/rpl/t/rpl_binlog_corruption.test:
  Disabled the test for Windows (see bug #47639)
mysql-test/suite/rpl/t/rpl_killed_ddl.test:
  Disabled the test for Windows (see bug #47638)
vio/viosocket.c:
  Added an implementation of vio_poll_read for Windows.
  Winsock does not support the poll function.
  So the existing generic implementation of vio_poll_read
  could not be used for Windows.